calibration fixes... cutoff functionality.. stroke functionality and some more goodies ;P

--- a/app.nw/css/screen.less
+++ b/app.nw/css/screen.less
@@ -61,6 +61,7 @@ footer {
 	padding: 0 15px;
 	font-size: 80%;
 	color: #aaa;
+	z-index: -1;
 }
 
 h1, h2, h3 {
@@ -139,7 +140,7 @@ button {
 	&#main {
 		h1 {
 			font-size: 60px;
-			margin: 5px 0 30px;
+			margin: 5px 0 24px;
 		}
 		.row {
 			margin: 15px -15px;
@@ -233,10 +234,10 @@ button {
 		}
 		.calibration {
 			text-align: center;
-			margin-top: 30px;
+			margin-top: 5px;
 			span {
 				display: inline-block;
-				padding: 6px 0;
+				padding: 7px 0;
 			}
 		}
 		.third, .buttons {
